add all changes

--- a/pet-information.html
+++ b/pet-information.html
@@ -35,7 +35,7 @@
             <li>Stretch and Scratch</li>
             <li>Groom</li>
             <li>Hide</li>
-            <li>Be Adored By Their Humans</li>
+            <li><strong>Be Adored By Their Humans</strong></li>
         </ol>
         
     </body>
