--- a/pet-information.html
+++ b/pet-information.html
@@ -37,6 +37,11 @@
             <li>Hide</li>
             <li><strong>Be Adored By Their Humans</strong></li>
         </ol>
+        <h1>About me</h1>
+        Names: Jeanne d'Arc NYIRAMWIZA /br
+        email:njoanc@gmail /br
+        Phone number: +250783451689 /br
+        Kigali/Rwanda
         
     </body>
     
