--- a/pet-information.html
+++ b/pet-information.html
@@ -38,9 +38,9 @@
             <li><strong>Be Adored By Their Humans</strong></li>
         </ol>
         <h1>About me</h1>
-        Names: Jeanne d'Arc NYIRAMWIZA <br>
-        email:njoanc@gmail <br>
-        Phone number: +250783451689 <br>
+        <strong>Names:</strong>Jeanne d'Arc NYIRAMWIZA <br>
+        <strong>email:</strong>njoanc@gmail <br>
+        <strong>Phone number:</strong> +250783451689 <br>
         Kigali/Rwanda
         
     </body>
