add all changes

--- a/pet-information.html
+++ b/pet-information.html
@@ -28,7 +28,7 @@
             <li>Eat</li>
             <li>Sleep</li>
             <li>Play</li>
-            <video width="320" height="240" controls><source src="https://bit.ly/2Uk196R" type="video/mp4" loop="1">
+            <video width="320" height="240" controls><source src="https://bit.ly/2Uk196R" type="video/mp4" autoplay>
             Your browser does not support the video tag.
             </video>
             <li>Watch Wildlife</li>
