--- a/pet-information.html
+++ b/pet-information.html
@@ -37,6 +37,7 @@
             <li>Hide</li>
             <li>Climbing trees</li>
             <li><strong>Be Adored By Their Humans</strong></li>
+            <li>Climbing trees</li>
         </ol>
         <h1>About me</h1>
         <strong>Names:</strong>Jeanne d'Arc NYIRAMWIZA <br>
